remove lombok for entities